included paragraph text

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-    <h2 style="text-align:center;">Welcome to Project</h2>
+    <h2 style="text-align:center ; background-color: blueviolet; color: white;">Welcome to Project</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae similique suscipit temporibus modi accusantium
+        distinctio in illum, corrupti, consectetur vero rem sed pariatur enim adipisci nesciunt illo delectus laborum
+        dolorum.</p>
 </body>
 
 </html>
